--- a/olca-app-build/credits/about_template.html
+++ b/olca-app-build/credits/about_template.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>About openLCA</title>
+  <title>About aicpLCA</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <style>
@@ -81,7 +81,7 @@
   <div class="container">
 
     <p>
-      The openLCA project makes available all content in this package
+      The aicpLCA project makes available all content in this package
       ("Content"). Unless otherwise indicated, the Content is provided to you
       under the terms and conditions of the Mozilla Public License Version 2.0
       ("MPL"). A copy of the MPL is available at
@@ -89,9 +89,9 @@
     </p>
 
     <p>
-      The openLCA project is maintained and coordinated by
+      The aicpLCA project is maintained and coordinated by
       <a href="www.greendelta.com">GreenDelta</a>. If you did not receive this
-      Content directly from the openLCA project, the Content is being
+      Content directly from the aicpLCA project, the Content is being
       redistributed by another party ("Redistributor") and different terms and
       conditions may apply to your use of any object code in the Content.
       Check the Redistributor's license that was provided with the Content. If
