--- a/olca-app-html/src/report/report.html
+++ b/olca-app-html/src/report/report.html
@@ -29,7 +29,7 @@
                 + " of JavaScript that is used in this report. You can export the"
                 + " report with the export button in the toolbar and open it with"
                 + " an alternative browser. On Windows, you can also configure"
-                + " openLCA to use WebView2 with Edge, if this is installed"
+                + " aicpLCA to use WebView2 with Edge, if this is installed"
                 + " under File > Settings > Configuration.";
             document.body.appendChild(p);
             errorMessageAdded = true;
